remove-demo-class

--- a/demo/index.html
+++ b/demo/index.html
@@ -30,7 +30,7 @@
       <parcela-checkout
         environment="TEST"
         clientKey="test_IBIF7UD6SNB7ZJG3KVEGM3UP5M57BJ4B"
-        apiUrl="http://localhost:9010"
+        apiUrl="https://sandbox.parcelaexpress.com.br/"
         sellerKey="e137d1b6-8f84-4377-ab5c-d27dd24415bd"
         successReturnUrl="https://success-url.com.br"
         errorReturnUrl="https://error-url.com.br"
@@ -69,6 +69,6 @@
       web_component.beforeSubmit = (state) => console.log("before submit");
       web_component.afterSubmit = (state) => console.log("after submit");
     </script>
-    <script defer src="../index.js"></script>
+    <script defer src="index.js"></script>
   </body>
 </html>
