--- a/demo/index.html
+++ b/demo/index.html
@@ -30,7 +30,7 @@
       <parcela-checkout
         environment="TEST"
         clientKey="test_IBIF7UD6SNB7ZJG3KVEGM3UP5M57BJ4B"
-        apiUrl="http://324d-189-15-42-40.ngrok.io"
+        apiUrl="https://sandbox.parcelaexpress.com.br"
         sellerKey="e137d1b6-8f84-4377-ab5c-d27dd24415bd"
         successReturnUrl="https://success-url.com.br"
         errorReturnUrl="https://error-url.com.br"
