make payment button optional

--- a/demo/index.html
+++ b/demo/index.html
@@ -80,6 +80,7 @@
       web_component.onSubmitError = (state) => console.log(state);
       web_component.beforeSubmit = (state) => console.log("before submit");
       web_component.afterSubmit = (state) => console.log("after submit");
+      web_component.showPayButton = true;
     </script>
     <script defer src="index.js"></script>
   </body>
