--- a/demo/index.html
+++ b/demo/index.html
@@ -73,7 +73,8 @@
             seller_id: "99d1f231-557a-44b9-ae5d-9b5f533c684e",
           }
         ],
-        confirmation_required: false
+        confirmation_required: false,
+        active_3ds: true
       };
       web_component.onChange = (state) => console.log(state);
       web_component.onSubmit = (state) => console.log(state);
