add service_id field to payments

--- a/demo/index.html
+++ b/demo/index.html
@@ -71,12 +71,12 @@
           },
           {
             amount: 5000,
-            seller_id: "99d1f231-557a-44b9-ae5d-9b5f533c684e",
-            no_cost: true
+            seller_id: "99d1f231-557a-44b9-ae5d-9b5f533c684e"
           }
         ],
         confirmation_required: false,
-        active_3ds: true
+        active_3ds: true,
+        service_id: "seu id(opcional)"
       };
       web_component.onChange = (state) => console.log(state);
       web_component.onSubmit = (state) => console.log(state);
