add protocol field to customer data

--- a/demo/index.html
+++ b/demo/index.html
@@ -76,7 +76,8 @@
         ],
         confirmation_required: false,
         active_3ds: true,
-        service_id: "seu id(opcional)"
+        service_id: "seu id(opcional)",
+        protocol: "PROTOCOLO123658"
       };
       web_component.onChange = (state) => console.log(state);
       web_component.onSubmit = (state) => console.log(state);
